changed ts rules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "files": [],
+  "noImplicitAny": false,
+  "allowJs": true,
   "references": [
     {
       "path": "./tsconfig.node.json"
     },
     {
       "path": "./tsconfig.app.json"
-    }
+    },
   ]
 }
