--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@vueuse/core": "^10.1.2",
     "pinia": "^2.1.3",
+    "primeicons": "^6.0.1",
     "primevue": "^3.29.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
