--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
+    "vite-plugin-pwa": "^0.16.5",
     "vue-tsc": "^1.6.5"
   }
 }
