--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vueuse/core": "^10.1.2",
+    "@vueuse/components": "^10.5.0",
+    "@vueuse/core": "^10.5.0",
     "pinia": "^2.1.3",
     "primeicons": "^6.0.1",
     "primevue": "^3.29.2",
