--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "fairyVault",
+  "name": "fairy-vault",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "vite --host",
-    "build": "run-p type-check build-only",
+    "build": "vite build",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
